--- a/gb/19/9/14/n11520621.md
+++ b/gb/19/9/14/n11520621.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upgpqd328/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/upgpqd328/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/upgpqd328/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/upgpqd328/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upgpqd328/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upgpqd328/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upgpqd328/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upgpqd328/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>专门回中国镶假牙值得吗？</h2>
 
 <h6></h6>
 <hr>
 <p><span style="color: #800000;"><strong>文 | 千卉</strong></span></p>
-<p>近年来，移民到魁北克的中国人的数量有增无减。这些中国移民中，又以80后为主力军。因为他们中的绝大多数为独生子女，来到魁北克定居的父母们也越来越多。当这些父母们缺牙时，其中不乏有专门回国镶<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>者。周志阳医师介绍，其实回中国镶假牙并不值得。</p>
+<p>近年来，移民到魁北克的中国人的数量有增无减。这些中国移民中，又以80后为主力军。因为他们中的绝大多数为独生子女，来到魁北克定居的父母们也越来越多。当这些父母们缺牙时，其中不乏有专门回国镶<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>者。周志阳医师介绍，其实回中国镶假牙并不值得。</p>
 <h2>价格差距趋小</h2>
-<p>随着国内物价的全面上涨，<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>的价格也水涨船高。以地级市以上的正规口腔医院为例，镶全口假牙的价格在7,000～10,000人民币之间。如果再加上机票费用，回国镶假牙其实并不划算。</p>
+<p>随着国内物价的全面上涨，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%87%E7%89%99.md#1">假牙</a>的价格也水涨船高。以地级市以上的正规口腔医院为例，镶全口假牙的价格在7,000～10,000人民币之间。如果再加上机票费用，回国镶假牙其实并不划算。</p>
 <h2>材料安全性差距大</h2>
 <p>2016年，央视3?15晚会现场曝光了中国生产的劣质假牙问题，比如：生产假牙金属支架的材料是回收料或是工业废钢。而且往往经过反复回收再利用，有害元素浓度越来越高。更有甚者，这些假牙不消毒，用员工用过的旧牙刷清洁后就寄到医院给患者戴上。</p>
 <h2>假牙加工方式差异大</h2>
-<p>魁北克的可摘<ahref="https://github.com/upgpqd328/djy/blob/master/gb/tag/%E4%B9%89%E9%BD%BF.md#1">义齿</a>镶复医师（Denturologiste）这一职业仅存在于口腔医学高度发达的四个国家：加拿大、美国、澳大利亚和英国。其优势在于镶牙的临床和加工两方面全部由医师亲自完成。然而在中国，这个职业尚不存在，全科牙医仅完成镶牙的临床步骤，假牙的加工仍外包给义齿加工厂完成，质量难以控制。</p>
+<p>魁北克的可摘<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%89%E9%BD%BF.md#1">义齿</a>镶复医师（Denturologiste）这一职业仅存在于口腔医学高度发达的四个国家：加拿大、美国、澳大利亚和英国。其优势在于镶牙的临床和加工两方面全部由医师亲自完成。然而在中国，这个职业尚不存在，全科牙医仅完成镶牙的临床步骤，假牙的加工仍外包给义齿加工厂完成，质量难以控制。</p>
 <h2>日后调牙困难重重</h2>
 <p>周医师补充说，做好假牙并将其戴入患者口中，这并非镶假牙的最后一步，假牙必须经过必要的数次调整之后才能佩戴舒服。因此，回中国镶假牙的患者还必须要考虑到日后调牙的问题。现实中，魁北克当地的医师往往都会拒绝调整并非自己制作的假牙，以避免调牙后责任转移的问题。因此，每次患者感到不舒服，都乘飞机专门回中国调牙毕竟是不现实的。</p>
 <p>责任编辑：颜永明</p>
@@ -21,48 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/3/21/n11129890.md#1">正确清洗活动假牙 保障您的口腔健康</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/5/24/n11278535.md#1">为什么魁北克人镶牙时首选活动假牙？</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/5/24/n11278570.md#1">活动假牙也需要磨牙吗？</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/9/14/n11520598.md#1">镶活动假牙 选择可摘义齿镶复医师还是全科牙医？</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/9/14/n11520604.md#1">镶牙前患者需要做哪些准备工作？</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/12/29/n12652632.md#1">圣诞新年假期 蒙特利尔各机构开关门信息</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/10/28/n12508485.md#1">在魁北克给汽车换冬季轮胎的5要和5不要</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/10/6/n12458005.md#1">疫情下 魁北克哪些行业找工作机会多？</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/9/8/n12389806.md#1">疫情期间 老妈在魁北克手术就医记（1）</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/8/11/n12323146.md#1">在魁北克领略薰衣草的夏天</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/21/n11129890.md#1">正确清洗活动假牙 保障您的口腔健康</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/24/n11278535.md#1">为什么魁北克人镶牙时首选活动假牙？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/24/n11278570.md#1">活动假牙也需要磨牙吗？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/14/n11520598.md#1">镶活动假牙 选择可摘义齿镶复医师还是全科牙医？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/14/n11520604.md#1">镶牙前患者需要做哪些准备工作？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/24/n13111483.md#1">常犯的驾驶坏习惯（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/17/n13094574.md#1">常犯的驾驶坏习惯（中）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/9/n13079704.md#1">常犯的驾驶坏习惯（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/3/n13064724.md#1">狂风中驾驶5大提示（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/25/n13048329.md#1">狂风中驾驶5大提示（上）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9819782.md#1" target="_blank">布拉格共产主义受难者纪念碑背后故事</a></li><li><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/10/n11512510.md#1" target="_blank">杨宁：从瑞典最豪华战舰沉没说中共的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/20/12/27/n12647950.md#1">偶然的天意？康熙时钱币的预示</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12684087.md#1">【时事纵横】马云关黑牢？ 美官员频会台外交官</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681255.md#1">【财商天下】2021年大饥荒？谁来养活中国</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12681963.md#1">【有冇搞错】马云外逃？中国是大重构下个目标</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12679966.md#1">【翻墙必看】传马云恐被抓关押在黑屋</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681413.md#1">金正恩胞妹被意外踢出朝鲜政治局</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681139.md#1">【新闻大家谈】比川普推特被封更重要的事</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12681992.md#1">晒与张钧甯等艺人合照 范冰冰：还是闺密靠谱</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/10/n12679436.md#1">张檬晒素颜证件照 告诫后来人不要整容</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/10/n12679612.md#1">女儿想要个妹妹 张梓琳反问“是弟弟咋办”</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681730.md#1">粉丝好奇如何拍逼真断腿戏 刘德华幽默回应</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/13/n12684292.md#1">杨颖受攻击 黄晓明护妻：冲我来 评论永不关闭</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12681545.md#1">彩色口罩含致癌物？医师：3种颜色较安全</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12682337.md#1">诺查丹玛斯预言成真？ 小行星13日接近地球</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/9/n12677857.md#1">寒冷天气做到这3点 预防脑中风</a></li>
-<li><a href="https://github.com/upgpqd328/djy/blob/master/gb/21/1/12/n12682606.md#1">奇特画面：男子在游泳池内 头部与身体分离</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/upgpqd328/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/upgpqd328/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/14/n11520621.htm">专门回中国镶假牙值得吗？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/14/n11520621.htm">专门回中国镶假牙值得吗？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/upgpqd328/djy/blob/master/gb/19/9/14/n11520621.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upgpqd328/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upgpqd328/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upgpqd328/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upgpqd328/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/9/14/n11520621.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
